--- a/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
+++ b/public/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.mustache
@@ -13,12 +13,12 @@
     &lt;div class=&quot;admin-tools&quot;&gt;
       &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Muokkaa perustietoja&quot; /&gt;
       &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Kirjoita yhteenveto&quot; /&gt;
-      &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Lis&auml;&auml; kieliversio&quot; /&gt;
+      &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Lis&Atilde;&curren;&Atilde;&curren; kieliversio&quot; /&gt;
       &lt;input class=&quot;btn&quot; type=&quot;submit&quot; value=&quot;Osallistumisraportti&quot; /&gt;
     &lt;/div&gt;
     &lt;!-- Menossa olevat osallistumiset --&gt;
     &lt;div class=&quot;content-item large&quot;&gt;
-      &lt;div id=&quot;showParticipations&quot; class=&quot;content-item large participations cf&quot;&gt;
+      &lt;div id=&quot;showParticipations&quot; class=&quot;participations cf&quot;&gt;
         &lt;h2 class=&quot;ongoing&quot;&gt;
           Menossa olevat osallistumiset
         &lt;/h2&gt;
@@ -27,7 +27,7 @@
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
           &lt;/div&gt;
-          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&auml;rist&ouml;n hyvinvointi - miten sit&auml; voidaan...&lt;/a&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&Atilde;&curren;rist&Atilde;&para;n hyvinvointi - miten sit&Atilde;&curren; voidaan...&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
         &lt;/div&gt;
         &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
@@ -43,7 +43,7 @@
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
           &lt;/div&gt;
-          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/a&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&Atilde;&curren;tt&Atilde;&curren;v&Atilde;&curren; rahoitus tulisi sijoittaa?&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
         &lt;/div&gt;
         &lt;div id=&quot;btnAddParticipationContainer&quot; class=&quot;lift-button gray-base is-hidden float-left&quot;&gt;
@@ -55,7 +55,7 @@
           &lt;a class=&quot;icon-lift-link&quot; id=&quot;btnAddParticipation&quot;&gt;Luo uusi osallistuminen&lt;/a&gt;
         &lt;/div&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;addParticipations&quot; class=&quot;content-item large participations cf&quot;&gt;
+      &lt;div id=&quot;addParticipations&quot; class=&quot;participations cf&quot;&gt;
         &lt;h2 class=&quot;create&quot;&gt;
           Luo uusi osallistuminen
         &lt;/h2&gt;
@@ -81,23 +81,23 @@
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
-    
-    &lt;div class=&quot;g&quot;&gt;
-      &lt;div class=&quot;g-2up&quot;&gt;
-        &lt;div class=&quot;gi&quot;&gt;
+
+    &lt;div class=&quot;g-ext&quot;&gt;
+      &lt;div class=&quot;g-2up-ext&quot;&gt;
+        &lt;div class=&quot;gi-ext&quot;&gt;
           &lt;div class=&quot;content-item large&quot;&gt;
             &lt;div class=&quot;status&quot;&gt;
-              Tila: &lt;span class=&quot;state&quot;&gt;K&auml;ynniss&auml;&lt;/span&gt;
+              Tila: &lt;span class=&quot;state&quot;&gt;K&Atilde;&curren;ynniss&Atilde;&curren;&lt;/span&gt;
             &lt;/div&gt;
             &lt;div class=&quot;gantt-title&quot;&gt;
-              Aikataulu: &lt;span class=&quot;date&quot;&gt;23.10.2012&ndash;31.12.2014&lt;/span&gt;
+              Aikataulu: &lt;span class=&quot;date&quot;&gt;23.10.2012&acirc;€“31.12.2014&lt;/span&gt;
             &lt;/div&gt;
           &lt;/div&gt;
           &lt;div class=&quot;content-item large&quot;&gt;
             &lt;div class=&quot;fadeout&quot;&gt;
-              &lt;p class=&quot;ingressi&quot;&gt;Hankkeen kuvausteksti t&auml;nne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.&lt;/p&gt;
+              &lt;p class=&quot;ingressi&quot;&gt;Hankkeen kuvausteksti t&Atilde;&curren;nne. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget elementum nibh. Nunc in tortor vel velit feugiat dictum nec pharetra erat. In eget molestie velit. Suspendisse tincidunt pharetra lorem, non pharetra orci porta vel. Proin adipiscing, lacus sed euismod posuere, felis nunc varius nisi, eu volutpat mi odio a mi. Nullam vel tellus tincidunt, tristique sem sed, ullamcorper mi. Suspendisse potenti. Pellentesque tristique libero eget mollis congue. Pellentesque porta facilisis lobortis. Ut sit amet lorem eros. Cras rutrum metus quis condimentum egestas. Pellentesque iaculis turpis purus, a elementum diam convallis non. In nulla purus, ultrices quis turpis in, facilisis ultrices est. Pellentesque eu justo lobortis ligula sagittis tristique. Sed varius massa sed lectus tempus, sed eleifend ligula tincidunt. Curabitur aliquam porta enim, at bibendum arcu elementum nec.&lt;/p&gt;
               &lt;p class=&quot;read-more&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;some-buttons inline-element&quot;&gt;
@@ -111,7 +111,8 @@
               &lt;/a&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class=&quot;content-item large project-analysis&quot;&gt;
+
+          &lt;div class=&quot;content-item large&quot;&gt;
             &lt;span class=&quot;debug-hide&quot;&gt;x&lt;/span&gt;
             &lt;h2&gt;
               Yhteenveto
@@ -119,19 +120,19 @@
             &lt;div class=&quot;fadeout&quot;&gt;
               &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit. &lt;/p&gt;
               &lt;p class=&quot;read-more&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/p&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;content-item large gantt&quot;&gt;
+            &lt;div class=&quot;fadeout&quot;&gt;
+              &lt;img id=&quot;chartHankeGantt&quot; src=&quot;../../images/fpo_square.png&quot; alt=&quot;Gantt-kuva&quot; /&gt;
+              &lt;p class=&quot;read-more&quot;&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
           &lt;/div&gt;
           &lt;div class=&quot;content-item large&quot;&gt;
-            &lt;div class=&quot;fadeout&quot;&gt;
-              &lt;img id=&quot;chartHankeGantt&quot; src=&quot;../../images/fpo_square.png&quot; alt=&quot;Gantt-kuva&quot; /&gt;
-              &lt;p class=&quot;read-more&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
-              &lt;/p&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;content-item large participator-list&quot;&gt;
             &lt;span class=&quot;debug-hide&quot;&gt;x&lt;/span&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help h3&quot; title=&quot;Lorem ipsum&quot; placement=&quot;top&quot;&gt;Hankkeen osallistujat&lt;/span&gt;
@@ -151,7 +152,7 @@
                       &lt;span&gt;&lt;/span&gt;
                     &lt;/td&gt;
                     &lt;td&gt;
-                      Vastuuhenkil&ouml;
+                      Vastuuhenkil&Atilde;&para;
                       &lt;span&gt;&lt;/span&gt;
                     &lt;/td&gt;
                     &lt;td&gt;
@@ -181,7 +182,7 @@
                   &lt;/tr&gt;
                   &lt;tr&gt;
                     &lt;td class=&quot;left&quot;&gt;
-                      &lt;a href=&quot;#&quot;&gt;Matti Meik&auml;l&auml;inen&lt;/a&gt;
+                      &lt;a href=&quot;#&quot;&gt;Matti Meik&Atilde;&curren;l&Atilde;&curren;inen&lt;/a&gt;
                     &lt;/td&gt;
                     &lt;td&gt;
                       X
@@ -240,35 +241,14 @@
                 &lt;/tbody&gt;
               &lt;/table&gt;
               &lt;p class=&quot;read-more&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class=&quot;gi&quot;&gt;
-          &lt;div class=&quot;content-item large invitation&quot;&gt;
-            &lt;h3&gt;
-              &lt;img src=&quot;../../images/favicon_32x32.jpg&quot; /&gt;Kutsu muita osallistumaan
-            &lt;/h3&gt;
-            &lt;div class=&quot;form-element&quot;&gt;
-              &lt;div class=&quot;helper-container&quot;&gt;
-                &lt;span class=&quot;icon-help&quot; title=&quot;lis&auml;&auml; k&auml;ytt&auml;j&auml;nimi&auml; tai s&auml;hk&ouml;postiosoitteita&quot; placement=&quot;top&quot;&gt;Kenelle&lt;/span&gt;
-                &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;lis&auml;&auml; k&auml;ytt&auml;j&auml;nimi&auml; tai s&auml;hk&ouml;postiosoitteita&lt;/p&gt;
-              &lt;/div&gt;
-              &lt;input type=&quot;text&quot; /&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;form-element&quot;&gt;
-              &lt;div class=&quot;helper-container&quot;&gt;
-                &lt;span class=&quot;icon-help&quot; title=&quot;valinnainen viesti s&auml;hk&ouml;postikutsuun&quot; placement=&quot;top&quot;&gt;Viesti&lt;/span&gt;
-                &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;valinnainen viesti s&auml;hk&ouml;postikutsuun&lt;/p&gt;
-              &lt;/div&gt;
-              &lt;textarea class=&quot;js-dynamic&quot; maxlength=&quot;400&quot; placeholder=&quot;Kirjoita valinnainen viesti...&quot;&gt;&lt;/textarea&gt;
-            &lt;/div&gt;
-            &lt;input class=&quot;btn btn-otk&quot; type=&quot;submit&quot; value=&quot;L&auml;het&auml; kutsu&quot; /&gt;
-            &lt;div class=&quot;sidebar-form-errors&quot;&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;content-item large hanke-info&quot;&gt;
+        &lt;div class=&quot;gi-ext&quot;&gt;
+          &lt;!-- perustiedot --&gt;
+          &lt;div class=&quot;content-item large&quot;&gt;
             &lt;h2&gt;
               &lt;a id=&quot;Info&quot;&gt;
                 Perustiedot
@@ -277,13 +257,13 @@
             &lt;div class=&quot;fadeout&quot;&gt;
               &lt;p&gt;Hankkeen johdanto. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc bibendum velit sed nunc ultrices tincidunt. In nulla orci, lacinia at placerat non, consequat nec enim. Phasellus dignissim elit at porttitor elementum. Aliquam felis nisi, gravida sed augue at, posuere consectetur nunc. Nulla varius tempor massa sed luctus. Mauris ornare sollicitudin nulla, mollis convallis enim porta nec. Nulla non mauris eleifend, accumsan lectus id, ultrices massa. Etiam dictum ligula ac dui venenatis semper. Donec congue libero vitae neque dignissim pretium. Maecenas lacinia ultricies lorem, id vulputate turpis interdum a. Nulla ac orci elit.&lt;/p&gt;
               &lt;p class=&quot;read-more&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;Lue lis&auml;&auml;&lt;/a&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
               &lt;/p&gt;
             &lt;/div&gt;
-            &lt;table class=&quot;table-borderless&quot;&gt;
+            &lt;table class=&quot;table-borderless narrow&quot;&gt;
               &lt;tbody&gt;
                 &lt;tr&gt;
-                  &lt;th&gt;Vastuuj&auml;rjest&ouml;/-henkil&ouml;&lt;/th&gt;
+                  &lt;th&gt;Vastuutaho&lt;/th&gt;
                   &lt;td colspan=&quot;2&quot;&gt;Lorem Ipsum&lt;/td&gt;
                 &lt;/tr&gt;
                 &lt;tr&gt;
@@ -323,15 +303,40 @@
                 &lt;/tr&gt;
               &lt;/tbody&gt;
             &lt;/table&gt;
-          &lt;/div&gt;          
-          &lt;div class=&quot;content-item large keywords&quot;&gt;
+          &lt;/div&gt;
+          
+          &lt;!-- kutsu --&gt;
+          &lt;div class=&quot;content-item large invitation&quot;&gt;
+            &lt;h3&gt;
+              &lt;img src=&quot;../../images/favicon_32x32.jpg&quot; /&gt;Kutsu muita osallistumaan
+            &lt;/h3&gt;
+            &lt;div class=&quot;form-element&quot;&gt;
+              &lt;div class=&quot;helper-container&quot;&gt;
+                &lt;span class=&quot;icon-help&quot; title=&quot;lis&Atilde;&curren;&Atilde;&curren; k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;nimi&Atilde;&curren; tai s&Atilde;&curren;hk&Atilde;&para;postiosoitteita&quot; placement=&quot;top&quot;&gt;Kenelle&lt;/span&gt;
+                &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;lis&Atilde;&curren;&Atilde;&curren; k&Atilde;&curren;ytt&Atilde;&curren;j&Atilde;&curren;nimi&Atilde;&curren; tai s&Atilde;&curren;hk&Atilde;&para;postiosoitteita&lt;/p&gt;
+              &lt;/div&gt;
+              &lt;input type=&quot;text&quot; /&gt;
+            &lt;/div&gt;
+            &lt;div class=&quot;form-element&quot;&gt;
+              &lt;div class=&quot;helper-container&quot;&gt;
+                &lt;span class=&quot;icon-help&quot; title=&quot;valinnainen viesti s&Atilde;&curren;hk&Atilde;&para;postikutsuun&quot; placement=&quot;top&quot;&gt;Viesti&lt;/span&gt;
+                &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;valinnainen viesti s&Atilde;&curren;hk&Atilde;&para;postikutsuun&lt;/p&gt;
+              &lt;/div&gt;
+              &lt;textarea class=&quot;js-dynamic&quot; maxlength=&quot;400&quot; placeholder=&quot;Kirjoita valinnainen viesti...&quot;&gt;&lt;/textarea&gt;
+            &lt;/div&gt;
+            &lt;input class=&quot;btn btn-otk&quot; type=&quot;submit&quot; value=&quot;L&Atilde;&curren;het&Atilde;&curren; kutsu&quot; /&gt;
+            &lt;div class=&quot;sidebar-form-errors&quot;&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+          
+          &lt;div class=&quot;content-item large&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
               &lt;span class=&quot;icon-help h4&quot; title=&quot;Lorem ipsum&quot; placement=&quot;top&quot;&gt;Asiasanat ja paikkakunnat&lt;/span&gt;
               &lt;p class=&quot;helper-text small is-vishidden&quot;&gt;Lorem ipsum&lt;/p&gt;
             &lt;/div&gt;
             &lt;ul class=&quot;tag-list&quot;&gt;
               &lt;li class=&quot;tag-with-icon&quot;&gt;
-                &lt;i class=&quot;fa fa-university&quot;&gt;&lt;/i&gt;Esimerkkiministeri&ouml;
+                &lt;i class=&quot;fa fa-university&quot;&gt;&lt;/i&gt;Esimerkkiministeri&Atilde;&para;
               &lt;/li&gt;
               &lt;li&gt;Turvallisuus&lt;/li&gt;
               &lt;li&gt;Esimerkki&lt;/li&gt;
@@ -345,18 +350,18 @@
       &lt;/div&gt;
     &lt;/div&gt;
 
-    &lt;!-- P&auml;&auml;ttyneet osallistumiset --&gt;
+    &lt;!-- P&Atilde;&curren;&Atilde;&curren;ttyneet osallistumiset --&gt;
     &lt;div class=&quot;content-item large&quot;&gt;
-      &lt;div class=&quot;content-item large participations cf&quot;&gt;
+      &lt;div class=&quot;content-item participations cf&quot;&gt;
         &lt;h2 class=&quot;ongoing&quot;&gt;
-          P&auml;&auml;ttyneet osallistumiset
+          P&Atilde;&curren;&Atilde;&curren;ttyneet osallistumiset
         &lt;/h2&gt;
         &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
           &lt;div class=&quot;count-container&quot;&gt;
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
           &lt;/div&gt;
-          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&auml;rist&ouml;n hyvinvointi - miten sit&auml; voidaan...&lt;/a&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&Atilde;&curren;rist&Atilde;&para;n hyvinvointi - miten sit&Atilde;&curren; voidaan...&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.1. asti&lt;/span&gt;
         &lt;/div&gt;
         &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
@@ -372,9 +377,9 @@
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
           &lt;/div&gt;
-          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/a&gt;
+          &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&Atilde;&curren;tt&Atilde;&curren;v&Atilde;&curren; rahoitus tulisi sijoittaa?&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.1. asti&lt;/span&gt;
-        &lt;/div&gt;        
+        &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
 
